examples/smlfmt-1.2.0/test/fail/illegal-begin-fn.sml
fun id x = x
val id' = id o fn x => x
